--- a/index.html
+++ b/index.html
@@ -9,66 +9,34 @@
 
 <div class="wrapper">
 
-  <div class="box header"><center>Twittler Lite</center></div>
+  <div class="box header"><center><img src="twittler.png"></center></div>
   <div class="box sidebar">
-    <center>Following</center>
-    <secion class="user"></secion>
+    <center>Apparently Important:</center>
+    <section class="user"><ul></ul></section>
+    <!-- <ul class="user"><li>nunonuno</li><li>shawndrost</li></ul> -->
   </div>
   <div class="box sidebar2">
-    <center>Trending Tweets</center>
-    <secion class="trendingTags"></secion>
+    <center>Trending Twits</center>
+    <section class="trendingTags"></section>
   </div>
-  <div class="box content"><center>Timeline</center>
+  <div class="box content"><center>Twittles</center>
+    <p align="right"><button class='refresh'>REFRESHING THINGS AWAIT</button></p>
     <section class="tweets"></section>
   </div>
-  <div class="box footer">Footer</div>
 </div>
     <script>
-
       $(document).ready(function(){
-        var $tweets = $('.tweets');
-        var $username = $('.users');
-        $tweets.html('');
-        var $hashtags = $('.trendingTags');
-        $hashtags.html('')
-        var $users = $('.user');
-        $users.html('');
+        getHashTags();
+        getUsers();
+        getTweets(streams.home);
 
-
-        var index = streams.home.length - 1;
-        while(index >= 0){
-          var tweet = streams.home[index];
-          var time = streams.home[index];
-          var user = streams.home[index];
-          var $time = $('<div class="timestamp"></div>');
-          var $tweet = $('<div class="message"></div>');
-          var $user = $('<div class="username"></div>');
-          $tweet.text(tweet.message);
-          $time.text(tweet.created_at);
-          $user.text('@' + tweet.user);
-          $user.appendTo($tweets);
-          $tweet.appendTo($tweets);
-          $time.appendTo($tweets);
-          index -= 1;
-        }
-
-        var tagIndex = tweets;
-        tagIndex.forEach(function(element) {
-          var hash = element;
-          var $trending = $('<div class="hashtags"></div>');
-          $trending.text(hash);
-          $trending.appendTo($hashtags);
-          tagIndex -= 1;
+        $('button').click(function() {
+          $('content').append(getTweets(streams.home));
         });
 
-        var users = window.users.sort();
-        users.forEach(function(element) {
-          var use = element;
-          var $user = $('<div class="user"></div>');
-          $user.text('@' + use);
-          $user.appendTo($users);
+        $('li').click(function(){
+          $(this).closest('.box.sidebar').append(getUserTweets($(this).text()));
         });
-
       }); 
 
     </script>
