reworked colors and added username section

--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
 
   <div class="box header"><center><img src="twittler.png"></center></div>
   <div class="box sidebar">
-    <h1><center>Your Peeps</center></h1>
-    <section class="user"><ul></ul></section>
+    <div><h1><center><img src="username.png"></center></h1></div>
+    <h2><center>Trending Twits</center></h2>
+    <section class="trendingTags"></section>
+
+
     <!-- <ul class="user"><li>nunonuno</li><li>shawndrost</li></ul> -->
   </div>
   <div class="box sidebar2">
-    <h1><center>Trending Twits</center></h1>
-    <section class="trendingTags"></section>
+    <h1><center>Your Peeps</center></h1>
+    <section class="user"><ul></ul></section>
   </div>
   <div class="box content"><h1><center>Twittles</center></h1>
     <p align="right"><button class='refresh'>Fetch Latest Chatter</button></p>
